--- a/assets/css/ui/container.module.scss
+++ b/assets/css/ui/container.module.scss
@@ -1,10 +1,10 @@
-@import '../../media-queries.scss';
+@import "../../media-queries.scss";
 
-.container{
-    margin-inline: auto;
-    max-width: 96rem;
-    width: calc(11/12 * 100%);
-    @include respond-below(xl){
-        width: calc(4/5 * 100%);
-    }
+.container {
+  margin-inline: auto;
+  max-width: 96rem;
+  width: calc(11 / 12 * 100%);
+  @include respond-above(xl) {
+    width: calc(4 / 5 * 100%);
+  }
 }
